# mortgage_concierge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_agent.py  test_bank_docs.py
.claude/: settings.json
.claude/agents/: tdd-code-writer.md  tdd-refactorer.md  tdd-test-writer.md
.claude/hooks/: audit-workflow.sh  check-complexity.sh  enforce-tdd-separation.sh  require-workitem.sh  session-start-info.sh
.claude/rules/: adk-patterns.md  tdd-rules.md  testing-rules.md  workflow.md
.workitems/: PLAN.md  README.md  master-plan.md
.workitems/_templates/: design.md  tasks.md  user_stories.md
_docs/: capability-map.md  sdlc-governance-summary.md
_docs/adrs/: ADR-000-template.md
_docs/architecture/: 22-04-25-counter-review.md  22-04-25-review.md  advisor_design.md  chroma_integration_plan.md  context_design.md  loan_calc_design.md
_docs/ddd/: bounded-contexts.md  domain-model.md  ubiquitous-language.md
_docs/diagrams/: agent-architecture.mmd  conversation-flow.mmd  sub-agent-interaction.mmd
_docs/guides/: googe-adk-context.md  google-adk-integration.md  google-adk-test.md  google-adk.md
_docs/prompts/: prompt-engineering-playbook.md
_docs/session/: 19-04-25-docs-scan.md  19-04-25-simple-rag.md  22-04-25-codereview.md  25-04-20-import-memory-search-fixes.md  28-04-25-package-evaluator-implementation.md
_docs/testing/: testing-strategy.md
_docs/tutorial/: full_tutorial.md  tutorial.md
mortgage_concierge/: __init__.py  agent.py  bootstrap.py  prompt.py
scripts/: move_evalsets.py
tests/eval/: README.md  (+1 more)
(+61 files in other folders)
