[project]
name = "mortgage-concierge"
version = "0.1.0"
description = "Mortgage advisor agent that helps users understand mortgage options, calculate loans, and navigate the mortgage application process"
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.75.0"
uvicorn = {extras = ["standard"], version = ">=0.17.0"}
python-dotenv = ">=0.20.0"
google-adk = ">=0.1.0"
litellm = "*"
google-generativeai = "*"
PyYAML = ">=6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
google-adk = { version = ">=0.1.0", extras = ["eval"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"